Asset editor high contrast, gallery select bug fix

--- a/theme/asset-editor.less
+++ b/theme/asset-editor.less
@@ -8,7 +8,7 @@
 .asset-editor-sidebar {
     width: @blocklyRowWidthWide;
     height: 100%;
-    border-right: 1px solid #dedede;
+    border-right: 1px solid @assetSidebarBorder;
 }
 
 .asset-editor-sidebar-info {
@@ -31,10 +31,10 @@
     width: ~"calc(@{blocklyRowWidthWide} - 2rem)";
     height: ~"calc(@{blocklyRowWidthWide} - 2rem)";
     margin: 0.5rem 0;
-    background-color: #e3ddd0;
+    background-color: @assetUnselected;
 
     .asset-editor-preview {
-        border: 2px solid #000;
+        border: 2px solid @black;
     }
 }
 
@@ -58,7 +58,7 @@
 }
 
 .asset-editor-gallery-tab {
-    background-color: #e3ddd0;
+    background-color: @assetUnselected;
     padding: .7em 2em .85em;
     font-size: 1rem;
     font-weight: 600;
@@ -88,8 +88,8 @@
     margin: 1rem 0 0 1rem;
     cursor: pointer;
 
-    border: solid 1px black;
-    background: white;
+    border: solid 1px @black;
+    background: @white;
 }
 
 .asset-editor-card.selected {
@@ -101,7 +101,7 @@
     margin-top: -2rem;
     height: 2rem;
     width: 2rem;
-    background: #fff;
+    background: @white;
     z-index: 2;
     line-height: 2rem;
     text-align: center;
@@ -110,7 +110,7 @@
 .asset-editor-preview {
     width: 100%;
     height: 100%;
-    background: #dedede;
+    background: @assetPreviewBackground;
 
     img {
         max-width: 100%;
@@ -130,14 +130,14 @@
 .asset-editor-button {
     padding: .7em 2em .85em;
     text-align: center;
-    background-color: #f8f8f8;
+    background-color: @assetSidebarButton;
     font-size: 1rem;
     box-shadow: inset 0 0 0 1px rgba(34,36,38,.15), inset 0 -0.3em 0 0 rgba(34,36,38,.15);
     cursor: pointer;
 }
 
 .asset-editor-button:hover {
-    background-color: #dedede;
+    background-color: @assetSidebarButtonHover;
 }
 
 .create-new {
@@ -181,11 +181,11 @@
     margin-bottom: 1rem;
     color: @white;
     font-weight: 700;
-    background-color: @teal;
+    background-color: @assetTypeButton;
     cursor: pointer;
 
     &:hover {
-        background-color: darken(@teal, 5%);
+        background-color: darken(@assetTypeButton, 5%);
     }
 
     i {
